fix(styles): add z-index variables and improve insurance-review

--- a/src/app/components/knx-chat-stream/chat-stream.component.scss
+++ b/src/app/components/knx-chat-stream/chat-stream.component.scss
@@ -1,13 +1,10 @@
-$knx-chat-stream-zindex: 1020;
-$knx-chat-stream-message-zindex: 1010;
-
 .knx-chat-stream {
   padding: 20px;
   align-items: stretch;
   background: $knab-primary-gray;
   border-radius: $knab-border-radius;
   margin-bottom: 40px;
-  z-index: $knx-chat-stream-zindex;
+  z-index: $z-index-chat-stream;
   overflow: visible;
 }
 
@@ -31,6 +28,6 @@ $knx-chat-stream-message-zindex: 1010;
 }
 
 .knx-chat-stream .knx-message--chat {
-  z-index: $knx-chat-stream-message-zindex;
+  z-index: $z-index-chat-stream-message;
   margin-top: 15px;
 }
